# pm

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  review.md
.claude/: settings.local.json
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_workflow.py  db.py  main.py
backend/app/static/: index.html
backend/data/: pm.db
backend/tests/: test_ai.py  test_ai_workflow.py  test_app.py  test_board_api.py  test_multi_board.py  test_user_management.py
docs/: DATABASE_SCHEMA.md  PLAN.md  code_review.md
frontend/: AGENTS.md
frontend/src/app/: globals.css
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: kanban.spec.ts
scripts/: start-linux.sh  start-windows.bat  start-windows.ps1  stop-linux.sh  stop-windows.bat  stop-windows.ps1
